--- a/src/App.css
+++ b/src/App.css
@@ -13,25 +13,32 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.bn11 {
+  display: inline-block;
+  padding: 0.5em 1.7em;
+  margin: 0.1em 0.5em 0.1em 0.5em;
+  border: 0.16em solid rgba(255, 255, 255, 0);
+  background-color: rgb(80, 10, 172);
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: #ffffff;
+  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+  text-align: center;
+  transition: all 0.2s;
 }
 
-.App-link {
-  color: #61dafb;
+a.bn11:hover {
+  border-color: rgb(255, 255, 255);
 }
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
